JumpScript/tests/baselines/reference/moduleSharesNameWithImportDeclarationInsideIt5.errors.txt
tests/cases/compiler/moduleSharesNameWithImportDeclarationInsideIt5.jump(10,12): error TS2300: Duplicate identifier 'M'.
tests/cases/compiler/moduleSharesNameWithImportDeclarationInsideIt5.jump(11,12): error TS2300: Duplicate identifier 'M'.


==== tests/cases/compiler/moduleSharesNameWithImportDeclarationInsideIt5.jump (2 errors) ====
    module Z {
        export module M {
            export function bar() {
                return "";
            }
        }
        export interface I { }
    }
    module A.M {
        import M = Z.I;
               ~
!!! error TS2300: Duplicate identifier 'M'.
        import M = Z.M;
               ~
!!! error TS2300: Duplicate identifier 'M'.
    
        export function bar() {
        }
        M.bar(); // Should call Z.M.bar
    }